--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ############################################################
 #
-# 配置数据源相关
+# \u914D\u7F6E\u6570\u636E\u6E90\u76F8\u5173
 #
 ############################################################
 spring.datasource.name=awesome_video
@@ -8,9 +8,9 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 spring.datasource.druid.filters=stat
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.druid.url=jdbc:mysql://localhost:3306/awesome_video?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.druid.url=jdbc:mysql://175.178.244.204:3306/awesome_video?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.druid.username=root
-spring.datasource.druid.password=123456
+spring.datasource.druid.password=Try@113388mysql
 spring.datasource.druid.initial-size=1
 spring.datasource.druid.min-idle=1
 spring.datasource.druid.max-active=20
@@ -18,93 +18,93 @@ spring.datasource.druid.test-on-borrow=true
 
 ############################################################
 #
-# mybatis 配置
+# mybatis \u914D\u7F6E
 #
 ############################################################
-# mybatis 扫描位置
+# mybatis \u626B\u63CF\u4F4D\u7F6E
 mybatis.type-aliases-package=com.lin.model
 mybatis.mapper-locations=classpath:mappers/*.xml
 
-# 设置打印sql语句
+# \u8BBE\u7F6E\u6253\u5370sql\u8BED\u53E5
 logging.level.com.lin.dao=debug
 
-# 通用Mapper配置
+# \u901A\u7528Mapper\u914D\u7F6E
 mapper.mappers=com.lin.utils.MyMapper
 mapper.not-empty=false
 mapper.identity=MYSQL
-# 分页插件配置
+# \u5206\u9875\u63D2\u4EF6\u914D\u7F6E
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
 ############################################################
 #
-# Server 配置
+# Server \u914D\u7F6E
 #
 ############################################################
-# 服务器端口
+# \u670D\u52A1\u5668\u7AEF\u53E3
 server.port=8085
 
 ############################################################
-# Server - tomcat 配置
+# Server - tomcat \u914D\u7F6E
 ############################################################
-# tomcat编码
+# tomcat\u7F16\u7801
 server.tomcat.uri-encoding=UTF-8
 
 ############################################################
 #
-# actuator环境监控 相关配置
+# actuator\u73AF\u5883\u76D1\u63A7 \u76F8\u5173\u914D\u7F6E
 #
 ############################################################
-# 加载所有的端点/默认只加载了 info / health
+# \u52A0\u8F7D\u6240\u6709\u7684\u7AEF\u70B9/\u9ED8\u8BA4\u53EA\u52A0\u8F7D\u4E86 info / health
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
-# 可以关闭指定的端点
+# \u53EF\u4EE5\u5173\u95ED\u6307\u5B9A\u7684\u7AEF\u70B9
 management.endpoint.shutdown.enabled=false
 
 ############################################################
 #
-# 热部署 相关配置
+# \u70ED\u90E8\u7F72 \u76F8\u5173\u914D\u7F6E
 #
 ############################################################
-# 热部署生效
+# \u70ED\u90E8\u7F72\u751F\u6548
 spring.devtools.restart.enabled=true
-# 启动网页热加载插件
+# \u542F\u52A8\u7F51\u9875\u70ED\u52A0\u8F7D\u63D2\u4EF6
 spring.devtools.livereload.enabled=true
-# 配置热加载端口（一次只能让一个项目进行热加载，除非重新设置端口）
+# \u914D\u7F6E\u70ED\u52A0\u8F7D\u7AEF\u53E3\uFF08\u4E00\u6B21\u53EA\u80FD\u8BA9\u4E00\u4E2A\u9879\u76EE\u8FDB\u884C\u70ED\u52A0\u8F7D\uFF0C\u9664\u975E\u91CD\u65B0\u8BBE\u7F6E\u7AEF\u53E3\uFF09
 #spring.devtools.livereload.port=33333
 ############################################################
 #
-# Spring MVC 相关配置
+# Spring MVC \u76F8\u5173\u914D\u7F6E
 #
 ############################################################
-# 配置静态资源所在目录
+# \u914D\u7F6E\u9759\u6001\u8D44\u6E90\u6240\u5728\u76EE\u5F55
 spring.mvc.static-path-pattern=/static/**
 
 
 ############################################################
 #
-# Thymeleaf 相关配置
+# Thymeleaf \u76F8\u5173\u914D\u7F6E
 #
 ############################################################
-# 禁用thymeleaf的缓存，防止热加载失败
+# \u7981\u7528thymeleaf\u7684\u7F13\u5B58\uFF0C\u9632\u6B62\u70ED\u52A0\u8F7D\u5931\u8D25
 spring.thymeleaf.cache=false
-# html文件所在位置
+# html\u6587\u4EF6\u6240\u5728\u4F4D\u7F6E
 spring.thymeleaf.prefix=classpath:/templates/
-# 网页文件后缀名
+# \u7F51\u9875\u6587\u4EF6\u540E\u7F00\u540D
 spring.thymeleaf.suffix=.html
 
 ############################################################
 #
-# REDIS 相关配置
+# REDIS \u76F8\u5173\u914D\u7F6E
 #
 ############################################################
-# Redis数据库索引（默认为0）
+# Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
 spring.redis.database=1
-# Redis服务器地址
-spring.redis.host=127.0.0.1
-# Redis端口号
+# Redis\u670D\u52A1\u5668\u5730\u5740
+spring.redis.host=175.178.244.204
+# Redis\u7AEF\u53E3\u53F7
 spring.redis.port=6379
-# Redis服务器连接密码（默认为空）
-spring.redis.password=
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
+spring.redis.password=Try@113388redis
