--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 spring.datasource.druid.filters=stat
 spring.datasource.druid.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.druid.url=jdbc:mysql://175.178.244.204:3306/awesome_video?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.druid.url=jdbc:mysql://192.168.1.14:3306/awesome_video?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.druid.username=root
-spring.datasource.druid.password=Try@113388mysql
+spring.datasource.druid.password=123456
 spring.datasource.druid.initial-size=1
 spring.datasource.druid.min-idle=1
 spring.datasource.druid.max-active=20
@@ -103,7 +103,7 @@ spring.thymeleaf.suffix=.html
 # Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
 spring.redis.database=1
 # Redis\u670D\u52A1\u5668\u5730\u5740
-spring.redis.host=175.178.244.204
+spring.redis.host=192.168.1.14
 # Redis\u7AEF\u53E3\u53F7
 spring.redis.port=6379
 # Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
